
  Added:
   - Monsters' inventories are now saved when the level is saved and will be
     loaded when a level is loaded.
   - A new default font, bd-font, has been implemented into the source code.
     This font will be used if the user specifies a font which doesn't exist.
     For now, DejaVu Sans Mono will continue to be included with SwashRL as
     the honest-to-god default font.

  Changed:
   - The color palette for the SDL terminal interface has been changed to a
     variation on the Tango color palette to provide more visible and vibrant
     colors.  The Money color pair still uses the old Green color, now
     referred to in the `init_colors` function as C_MONEY.
     See https://swash.link/images/v0.035-color-comparison.png
     for a side-by-side.
   - The deprecated Snow color pair has been removed and replaced with a
     Dead_Snow_Tree color pair, to be used to represent dead trees in snowy
     environments.
   - The Error color pair on the curses interface is now Gray on Red, rather
     than White on Red, to match the SDL terminal interface and avoid
     confusion with the Festive_Player color pair.
   - The Royal color pair is now Gold on Royal Purple, rather than Yellow on
     Royal Purple.
   - Monsters now have two character attributes: Strength and Endurance.
   - Items now have variables for Strength and Endurance bonuses, to be
     implemented at a later time.
   - The number of equipment slots for the player has been reduced to the
     following list:
      * Weapon-hand
      * Off-hand
      * Helmet
      * Armor
      * Shield
      * Boots
      * Left ring
      * Right ring
      * Necklace
      * Clothes
      * Tail
   - A monster's equipment slots are now in an associative array separate
     from the inventory.
   - A monster's wallet and inventory are now separate arrays not stored in
     a struct.
   - A monster's inventory is now a dynamic array.  In a future version of the